etc/openshift/hikingtracks-ns.yaml
apiVersion: v1
kind: Namespace
  labels:
    openshift.io/hibernate-include: "true"
  name: hikingtracks
spec:
  finalizers:
  - kubernetes
