etc/openshift/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb-persistent
    template: mariadb-persistent-template
  name: mysql
  namespace: hikingtracks
spec:
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: mysql
  sessionAffinity: None
  type: ClusterIP
