etc/openshift/wildfly-tls-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: wildfly
  name: wildfly-tls
  namespace: hikingtracks
spec:
  host: wildfly-tls-hikingtracks.1d35.starter-us-east-1.openshiftapps.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: wildfly
    weight: 100
  wildcardPolicy: None
